[gd_scene load_steps=4 format=3 uid="uid://4imwjmbgpuwh"]

[ext_resource type="Script" uid="uid://bc15pl5k0b5t8" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://sixfqsom77do" path="res://game.tscn" id="2_h2yge"]
[ext_resource type="FontFile" uid="uid://bmfccjxytgkd6" path="res://characters/glyphy/sixtyfour.ttf" id="3_h2yge"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="Game" parent="." instance=ExtResource("2_h2yge")]
unique_name_in_owner = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.00392157, 0.0235294, 0.764706)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 128
text = "GAME OVER :-("

[node name="GameWon" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameWon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.318509, 0.190841, 0.764706)

[node name="PanelContainer" type="PanelContainer" parent="GameWon/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameWon/ColorRect/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameWon/ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "You Win! :-)"

[node name="NextLevelButton" type="Button" parent="GameWon/ColorRect/PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h2yge")
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "Next Level"

[connection signal="game_over" from="Game" to="." method="_on_game_game_over"]
[connection signal="game_won" from="Game" to="." method="_on_game_game_won"]
[connection signal="pressed" from="GameWon/ColorRect/PanelContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
